# github-actions

./: .gitignore  README.md  mkdocs.yml  versions.json
.github/workflows/: deploy-docs.yml  test-mkdocs-deploy.yml  test-python-setup-pip.yml  test-python-setup-pixi.yml  test-python-setup-uv.yml  test-release-github.yml  test-release-pypi.yml
actions/mkdocs-deploy/: action.yml
actions/mkdocs-deploy/scripts/: mike_push.sh  prep_notebooks.py
actions/python-setup/pip/: action.yml
actions/python-setup/pixi/: action.yml
actions/python-setup/uv/: action.yml
actions/release/github/: action.yml
actions/release/pypi/: action.yml
docs/: VERSIONING.md  getting-started.md  index.md  mkdocs-deploy.md
docs/python-setup/: index.md  pip.md  pixi.md  uv.md
docs/reference/: index.md  mkdocs-deploy.md  python-setup-pip.md  python-setup-pixi.md  python-setup-uv.md  release-github.md  release-pypi.md
docs/release/github/: EXAMPLES.md  README.md
docs/release/pypi/: EXAMPLES.md  README.md
main/: 404.html  index.html  sitemap.xml
main/VERSIONING/: index.html
main/getting-started/: index.html
main/mkdocs-deploy/: index.html
main/python-setup/: index.html
main/python-setup/pip/: index.html
main/python-setup/pixi/: index.html
main/python-setup/uv/: index.html
main/reference/: index.html
main/reference/mkdocs-deploy/: index.html
main/reference/python-setup-pip/: index.html
main/reference/python-setup-pixi/: index.html
main/reference/python-setup-uv/: index.html
main/reference/release-github/: index.html
main/reference/release-pypi/: index.html
main/release/github/: index.html
main/release/github/EXAMPLES/: index.html
main/release/pypi/: index.html
main/release/pypi/EXAMPLES/: index.html
main/search/: search_index.json
planning/mkdocs/: notebook-execution-integration.md
scripts/: generate-pixi-lock-files.py  generate_action_docs.py
tests/data/mkdocs-deploy/test-custom-configuration/: pyproject.toml
tests/data/mkdocs-deploy/test-with-notebooks-pip-uv/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-with-notebooks-pip-uv/docs/: index.md
tests/data/mkdocs-deploy/test-with-notebooks-pixi/: mkdocs.yml  pyproject.toml
tests/data/mkdocs-deploy/test-with-notebooks-pixi/docs/: index.md
tests/data/mkdocs-deploy/test-with-notebooks-pixi/docs/notebook/: hello.ipynb
tests/data/mkdocs-deploy/test-with-notebooks-pixi/src/test_notebooks/: __init__.py
tests/data/pip/test-pip-cache-with-requirements/: requirements.txt
tests/data/pip/test-pip-single-group/: pyproject.toml
tests/data/release-github/test-with-config/: pyproject.toml
tests/data/release-github/test-with-config/docs/: change-log.md
tests/data/release-github/test-with-config/libs/pkg/: pyproject.toml
tests/data/release-github/test-with-config/libs/pkg/docs/: change-log.md
tests/data/release-pypi/test-basic-pip/: pyproject.toml
tests/data/release-pypi/test-basic-pip/src/serapeum_pypi_test_pip/: __init__.py
tests/data/release-pypi/test-basic-pixi/: pixi.toml  pyproject.toml
tests/data/release-pypi/test-basic-pixi/src/serapeum_pypi_test_pixi/: __init__.py
tests/data/release-pypi/test-basic-uv/: pyproject.toml
tests/data/release-pypi/test-basic-uv/src/serapeum_pypi_test_uv/: __init__.py
tests/data/release-pypi/test-testpypi/: README.md  pyproject.toml
tests/data/release-pypi/test-testpypi/src/serapeum_actions_pypi_test/: __init__.py
tests/data/release-pypi/test-with-groups/: pyproject.toml
tests/data/release-pypi/test-with-groups/src/serapeum_pypi_test_groups/: __init__.py
tests/data/release-pypi/test-workspace/: pixi.toml  pyproject.toml
