[project]
name = "test-notebooks"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocs-jupyter>=0.24.0",
  "mike>=2.1.0",
  "jupyter>=1.0.0",
  "nbconvert>=7.0.0",
  "ipykernel>=6.0.0",
]

[dependency-groups]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocs-jupyter>=0.24.0",
  "mike>=2.1.0",
  "jupyter>=1.0.0",
  "nbconvert>=7.0.0",
  "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_notebooks"]
