[project]
name = "test-notebooks"
version = "0.1.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_notebooks"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.5.0"
mkdocs-jupyter = ">=0.24.0"
mike = ">=2.1.0"
jupyter = ">=1.0.0"
nbconvert = ">=7.0.0"
ipykernel = ">=6.0.0"

[tool.pixi.environments]
docs = ["docs"]

[tool.pixi.pypi-dependencies]
test-notebooks = { path = ".", editable = true }
