[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-release-with-config"
version = "0.1.0"
description = "Root project for config-file monorepo test"
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/test_release_with_config"]

[dependency-groups]
dev = ["commitizen>=3.0.0"]
docs = ["mkdocs>=1.5.0"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "$version"
update_changelog_on_bump = true
changelog_file = "docs/change-log.md"
