[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serapeum-actions-pypi-test"
version = "0.1.0"
description = "CI test package for the serapeum-github-actions PyPI release composite action"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/serapeum_actions_pypi_test"]
