[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serapeum-actions-pypi-test"
version = "0.1.0"
description = "CI test package for the serapeum-github-actions PyPI release composite action"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/serapeum_actions_pypi_test"]

[tool.hatch.build.targets.sdist]
# Explicitly restrict sdist to project files only.
# Without this, hatchling includes everything in the working directory,
# which in CI is the entire repository checkout (~800 kB of unrelated files).
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]
