[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-pkg"
version = "0.1.0"
description = "Sub-package for config-file monorepo test"
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/test_pkg"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "test-pkg-$version"
update_changelog_on_bump = true
changelog_file = "docs/change-log.md"
